{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 13,
  "lineage": "1bacfd55-0d3a-fc43-20e5-3f5e385a09be",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039d908ecc0854afe",
            "arn": "arn:aws:ec2:us-east-1:620826431172:elastic-ip/eipalloc-039d908ecc0854afe",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0d4609fdb6937ef56",
            "domain": "vpc",
            "id": "eipalloc-039d908ecc0854afe",
            "instance": "i-0c04e3d2e303fa781",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02fa2f73548e05025",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-18-205-226-154.compute-1.amazonaws.com",
            "public_ip": "18.205.226.154",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.sg_tic_tac_toe",
            "aws_subnet.subnet-tic-tac-toe",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e5276ebb8451442",
            "arn": "arn:aws:ec2:us-east-1:620826431172:instance/i-0c04e3d2e303fa781",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c04e3d2e303fa781",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-02fa2f73548e05025"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02fa2f73548e05025",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "18.205.226.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a6215925d4b10183",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06656799cd9ae48b0",
            "tags": {
              "Name": "EC2 Instance"
            },
            "tags_all": {
              "Name": "EC2 Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0adfdfc9aa7f582df"
            ]
          },
          "dependencies": [
            "aws_eip.one",
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.sg_tic_tac_toe",
            "aws_subnet.subnet-tic-tac-toe",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:620826431172:internet-gateway/igw-0e2a8c65a5507546f",
            "id": "igw-0e2a8c65a5507546f",
            "owner_id": "620826431172",
            "tags": {
              "Name": "Gateway"
            },
            "tags_all": {
              "Name": "Gateway"
            },
            "vpc_id": "vpc-018d4c30d6e9e35d1"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:620826431172:network-interface/eni-02fa2f73548e05025",
            "attachment": [
              {
                "attachment_id": "eni-attach-0fefe210ef52e4265",
                "device_index": 0,
                "instance": "i-0c04e3d2e303fa781"
              }
            ],
            "id": "eni-02fa2f73548e05025",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:dc:54:c7:71",
            "owner_id": "620826431172",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0adfdfc9aa7f582df"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06656799cd9ae48b0"
          },
          "dependencies": [
            "aws_security_group.sg_tic_tac_toe",
            "aws_subnet.subnet-tic-tac-toe",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:620826431172:route-table/rtb-0022d7b056008eb5b",
            "id": "rtb-0022d7b056008eb5b",
            "owner_id": "620826431172",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e2a8c65a5507546f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table"
            },
            "tags_all": {
              "Name": "Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-018d4c30d6e9e35d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075942579af2f526e",
            "route_table_id": "rtb-0022d7b056008eb5b",
            "subnet_id": "subnet-06656799cd9ae48b0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.subnet-tic-tac-toe",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_tic_tac_toe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:620826431172:security-group/sg-0adfdfc9aa7f582df",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound traffic rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adfdfc9aa7f582df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Client",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Server",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "terraform-20240428185705332300000001",
            "name_prefix": "terraform-",
            "owner_id": "620826431172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Group"
            },
            "tags_all": {
              "Name": "Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-018d4c30d6e9e35d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-tic-tac-toe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:620826431172:subnet/subnet-06656799cd9ae48b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06656799cd9ae48b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "620826431172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet tic-tac-toe"
            },
            "tags_all": {
              "Name": "Subnet tic-tac-toe"
            },
            "vpc_id": "vpc-018d4c30d6e9e35d1"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:620826431172:vpc/vpc-018d4c30d6e9e35d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f378b9f31c4f421e",
            "default_route_table_id": "rtb-0e12fa97552ff5fa1",
            "default_security_group_id": "sg-0e4b5c3f83ba74a94",
            "dhcp_options_id": "dopt-0ef41f0555d2c5458",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-018d4c30d6e9e35d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e12fa97552ff5fa1",
            "owner_id": "620826431172",
            "tags": {
              "Name": "VPC"
            },
            "tags_all": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}